--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "html5-qrcode": "^2.3.8",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.8"
